--- a/http-basic-auth/package.json
+++ b/http-basic-auth/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "co": "^4.6.0",
     "debug": "^2.6.3",
+    "ejs": "^3.1.6",
     "jade": "~1.11.0",
     "koa": "^1.4.0",
     "koa-bodyparser": "^2.5.0",
